# pdfcat-new

./: .gitignore  .pre-commit-config.yaml  AUTHENTICATION_GUIDELINES.md  Dockerfile  GEMINI.md  PERFORMANCE_FIXES.md  README.md  README_INFRA.md  add_preview.py  advanced_pdf_analysis.py  allow_port.bat  clean_final.py  clean_toolbar.py  cleanup_ports.ps1  debug_server_startup.py  docker-compose.yml  final_fix.py  fix_buttons.py  fix_edit_css.py  fix_edit_layout.py  fix_encrypted_pdf.py  fix_pdfviewer2.py  fix_rotate_css.py  fix_template.py  main.py  microservices_ux_roadmap.py  package-lock.json  package.json  pdf  pdf_advanced_repair.py  prepare_client.bat  pyproject.toml  remove_custom_toolbar.py  run_batch_tests.py  server_manager_tray.py  setup.py  start.bat  start_all.py  start_client.bat  start_frontend.bat  (+11 more)
.ai/: TODO.md
.qwen/: settings.json  settings.json.orig
assets/: index.html
client/: api_manager.py  debug_monitor.py  main.py  main_window.py  performance_integration.py  requirements.txt  themes.py
docs/: ARCHITECTURE.md  AUTO_TAG_FEATURE.md  AUTO_TAG_ON_UPLOAD.md  BATCH_UPLOAD_BUG_ANALYSIS.md  BUGFIXES.md  CLIENT_ANALYSIS.md  CODING_STANDARDS.md  LOGGING_AND_AUDIT.md  MODULES_MAP.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  SEARCH_BUG_FIX.md  TEST_REPORT.md  ZOOM_OPTIMIZATION.md
frontend/: PDF_SECURITY.md  index.html  package-lock.json  package.json
manager/: main.py
scripts/: audit_code.py  check_admin.py  clean_imports.py  migrate.py  migrate_avatars.py  migrate_to_postgres.py  reset_database.py  run_tests.py  setup_vendor.ps1
(+190 files in other folders)
