[project]
name = "pdflib-app"
version = "0.1.0"
description = "Portable PDF Library"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.38",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "PyMuPDF==1.26.7",
    "pytesseract==0.3.10",
    "Pillow==12.0.0",
    "PyQt6==6.10.1",
    "qtawesome==1.3.1",
    "requests==2.32.3",
    "pydantic-core>=2.27.2",
    "psycopg2-binary==2.9.9",
    "dramatiq[redis]==2.1.0",
    "zeroconf==0.131.0",
    "httpx==0.27.0",
]
